--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ a {
   /* 1280 x 720 */
   --responsive-width: 0.07813vw;
   --responsive-height: 0.13889vh;
+  --responsive-average: calc((var(--responsive-width) + var(--responsive-height)) / 2);
 }
 
 /* TAGS */
